statum-macros/tests/ui/invalid_state_with_generics.stderr
error: Error: `#[state]` enum `GenericState` cannot declare generics.
       Found: `enum GenericState<'a, T> { ... }`
       Expected: `enum GenericState { Draft, Review(ReviewData) }`
       Fix: keep `GenericState` non-generic and move the generic data into a payload type such as `ReviewData<T>`.
  --> tests/ui/invalid_state_with_generics.rs:13:18
   |
13 | enum GenericState<'a, T> {
   |                  ^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_state_with_generics.rs:16:2
   |
16 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_state_with_generics.rs`
